--- a/terraform-modules/binderhub/assets/config.yaml
+++ b/terraform-modules/binderhub/assets/config.yaml
@@ -24,57 +24,8 @@ jupyterhub:
   hub:
     baseUrl: /jupyter/
     image:
-      name: binder-registry.conp.cloud/hub-image
-      tag: v1.16
-    fsGid: 999
-    extraVolumes:
-    - name: shared-data
-      hostPath:
-        path: /DATA
-    - name: docker-storage
-      hostPath:
-        path: /var/run/docker.sock
-    extraVolumeMounts:
-    - name: shared-data
-      mountPath: /srv/jupyterhub/data  # where hub can reach the shared data
-    - name: docker-storage
-      mountPath: /var/run/docker.sock
-    extraConfig:
-      myExtraConfig: |
-        import os
-        import shutil
-        import tempfile 
-        import subprocess
-        import docker
-        import urllib
-        from repo2data.repo2data import Repo2Data
-  
-        async def my_pre_spawn_hook(spawner):
-          repo_url = spawner.user_options.get('repo_url')
-          repo_name = repo_url.split("/")[-1]
-          user_name = repo_url.split("/")[-2]
-          provider_name = repo_url.split("/")[-3]
-          ref = spawner.user_options.get('image').split(':')[-1]  # commit hash
-          file_url = f"https://raw.githubusercontent.com/{user_name}/{repo_name}/{ref}/"
-          # Create temporary dir
-          t = tempfile.mkdtemp()
-
-          # Repo2Data
-          # Get data_requirement from upstream
-          print("Getting data requirements from {}".format(file_url))
-          data_req_path = os.path.join(t, "data_requirement.json")
-          data_req_found = True
-          try:
-            urllib.request.urlretrieve(file_url + "binder/data_requirement.json", data_req_path)
-          except:
-            print("{} not found".format(file_url + "binder/data_requirement.json"))
-            data_req_found = False
-          if data_req_found:
-            # Copy desired file from temporary dir
-            Repo2Data(server=True, data_requirement=data_req_path).install()
-          # Remove tmp dir
-          shutil.rmtree(t) 
-        c.KubeSpawner.pre_spawn_hook = my_pre_spawn_hook
+      name: jupyterhub/k8s-hub
+      tag: 1.1.3-n141.h28efde1b
   proxy:
     service:
       type: NodePort
@@ -93,27 +44,35 @@ jupyterhub:
       - name: book-data
         hostPath:
           path: /DATA/book-artifacts
+      - name: repo2data
+        hostPath:
+          path: /DATA
       extraVolumeMounts:
       - name: shared-data
         mountPath: /home/jovyan/data  # where each user can reach shared data
         readOnly : true
       - name: book-data
         mountPath: /mnt/books
+      - name: repo2data
+        mountPath: /mnt/data
     memory:
        limit: 2G
     cpu:
        limit: 2
-    startTimeout: 1800 #30min
+    startTimeout: 3600 #1h
     #for repo2data https://zero-to-jupyterhub.readthedocs.io/en/latest/resources/reference.html#singleuser-initcontainers
     # https://zero-to-jupyterhub.readthedocs.io/en/latest/jupyterhub/customizing/user-environment.html#about-user-storage-and-adding-files-to-it
     extraFiles:
       jb_build:
         mountPath: /usr/local/share/jb_build.bash
         mode: 0755
+      repo2data:
+        mountPath: /usr/local/share/repo2data.bash
+        mode: 0755
     lifecycleHooks:
       postStart:
         exec:
-          command: ["bash", "/usr/local/share/jb_build.bash"]   
+          command: ["/bin/sh", "-c", "/usr/local/share/repo2data.bash; /usr/local/share/jb_build.bash"]   
 
 # BinderHub config
 config:
