increasing binderhub launch timeout and retries

--- a/terraform-modules/binderhub/assets/config.yaml
+++ b/terraform-modules/binderhub/assets/config.yaml
@@ -76,6 +76,9 @@ jupyterhub:
 
 # BinderHub config
 config:
+  Launcher:
+    launch_timeout: 3600 #1h
+    retries: 10
   GitHubRepoProvider:
     banned_specs:
       # - ^(?!neurolibre\/.*).*
