--- a/terraform-modules/binderhub/assets/config.yaml
+++ b/terraform-modules/binderhub/assets/config.yaml
@@ -78,6 +78,7 @@ jupyterhub:
 config:
   Launcher:
     retries: 10
+    retry_delay: 1
   GitHubRepoProvider:
     banned_specs:
       # - ^(?!neurolibre\/.*).*
