--- a/terraform-modules/binderhub/assets/config.yaml
+++ b/terraform-modules/binderhub/assets/config.yaml
@@ -77,6 +77,7 @@ jupyterhub:
 # BinderHub config
 config:
   Launcher:
+    launch_timeout: 3601 #1h
     retries: 10
     retry_delay: 1
   GitHubRepoProvider:
