--- a/cloud-init/kubeadm/common.yaml
+++ b/cloud-init/kubeadm/common.yaml
@@ -7,6 +7,7 @@ manage_resolv_conf: true
 
 runcmd:
   - echo "127.0.0.1 $(hostname)" | sudo tee -a /etc/hosts
+  - echo "PubkeyAcceptedKeyTypes +ssh-rsa" >> /etc/ssh/ssh_config
 
 ssh_authorized_keys:
   ${ssh_authorized_keys}
