--- a/cloud-init/kubeadm/master.yaml
+++ b/cloud-init/kubeadm/master.yaml
@@ -33,7 +33,7 @@ runcmd:
   - echo "        User "${admin_user} >> /home/${admin_user}/.ssh/config; 
   #- su ${admin_user} -c "sudo docker login ${docker_registry} --username ${docker_id} --password ${docker_password}"
   - sudo groupadd docker
-  - sudo usermod -aG docker $USER
+  - sudo usermod -aG docker ${admin_user}
   - docker login ${docker_registry} --username ${docker_id} --password ${docker_password}
   - while [ ! -d /var/lib/kubelet/ ]; do sleep 1; done; 
   - cp /home/${admin_user}/.docker/config.json /var/lib/kubelet/
