--- a/cloud-init/kubeadm/node.yaml
+++ b/cloud-init/kubeadm/node.yaml
@@ -14,7 +14,7 @@ runcmd:
   # authorizing docker
   #- su ${admin_user} -c "sudo docker login ${docker_registry} --username ${docker_id} --password ${docker_password}"
   - sudo groupadd docker
-  - sudo usermod -aG docker $USER
+  - sudo usermod -aG docker ${admin_user}
   - docker login ${docker_registry} --username ${docker_id} --password ${docker_password}
   - while [ ! -d /var/lib/kubelet/ ]; do sleep 1; done; 
   - cp /home/${admin_user}/.docker/config.json /var/lib/kubelet/
