Fix docker conf and helm add file

--- a/cloud-init/kubeadm/node.yaml
+++ b/cloud-init/kubeadm/node.yaml
@@ -15,6 +15,6 @@ runcmd:
   #- su ${admin_user} -c "sudo docker login ${docker_registry} --username ${docker_id} --password ${docker_password}"
   - sudo groupadd docker
   - sudo usermod -aG docker ${admin_user}
-  - docker login ${docker_registry} --username ${docker_id} --password ${docker_password}
+  - su ${admin_user} -c "docker login ${docker_registry} --username ${docker_id} --password ${docker_password}"
   - while [ ! -d /var/lib/kubelet/ ]; do sleep 1; done; 
   - cp /home/${admin_user}/.docker/config.json /var/lib/kubelet/
