--- a/terraform-modules/binderhub/assets/config.yaml
+++ b/terraform-modules/binderhub/assets/config.yaml
@@ -8,7 +8,7 @@ jupyterhub:
   ingress:
     enabled: true
     hosts:
-      - binder.conp.cloud
+      - test.conp.cloud
     annotations:
       kubernetes.io/ingress.class: nginx
       kubernetes.io/tls-acme: "true"
@@ -16,8 +16,8 @@ jupyterhub:
     tls:
       - secretName: binder-conp-cloud-tls
         hosts:
-          - binder.conp.cloud
-          - tmp.binder.conp.cloud
+          - test.conp.cloud
+          - tmp.test.conp.cloud
   #https://discourse.jupyter.org/t/pre-building-images-on-binderhub/4325/4
   prePuller:
     continuous:
@@ -94,7 +94,7 @@ config:
       - ^shishirchoudharygic/mltraining.*
       - ^hmharshit/mltraining.*
   BinderHub:
-    hub_url: https://binder.conp.cloud/jupyter
+    hub_url: https://test.conp.cloud/jupyter
     use_registry: true
     image_prefix: binder-registry.conp.cloud/binder-registry.conp.cloud/binder-
 
@@ -104,7 +104,7 @@ service:
 ingress:
   enabled: true
   hosts:
-    - binder.conp.cloud
+    - test.conp.cloud
   annotations:
     kubernetes.io/ingress.class: nginx
     kubernetes.io/tls-acme: "true"
@@ -115,5 +115,5 @@ ingress:
   tls:
     - secretName: binder-conp-cloud-tls
       hosts: 
-        - binder.conp.cloud
-        - tmp.binder.conp.cloud
+        - test.conp.cloud
+        - tmp.test.conp.cloud
