--- a/terraform-modules/binderhub/assets/config.yaml
+++ b/terraform-modules/binderhub/assets/config.yaml
@@ -76,6 +76,8 @@ config:
     hub_url: https://test.conp.cloud/jupyter
     use_registry: true
     image_prefix: binder-registry.conp.cloud/binder-registry.conp.cloud/binder-
+    banner_message: |
+      <div style="text-align:center;"><p>This BinderHub deployment is exclusive for published NeuroLibre preprints.</p></div>
 
 service:
   type: NodePort
