--- a/cloud-init/kubeadm/server-common.yaml
+++ b/cloud-init/kubeadm/server-common.yaml
@@ -72,7 +72,8 @@ write_files:
       source /home/ubuntu/venv/neurolibre38/bin/activate
       pip3 install --upgrade pip setuptools wheel
       pip3 install -r /home/ubuntu/full-stack-server/api/requirements.txt
-      touch /home/ubuntu/venv_setup_completed
+      touch /tmp/venv_setup_completed
+      deactivate
 
   - path: /tmp/setup_celery.sh
     permissions: '0755'
@@ -154,13 +155,17 @@ runcmd:
   - su - ubuntu -c "/bin/bash /tmp/setup_venv.sh"
   - while [ ! -f /tmp/venv_setup_completed ]; do sleep 1; done;
   - /bin/bash /tmp/setup_nginx.sh
+  - touch /tmp/nginx_setup_completed
   - /bin/bash /tmp/setup_celery.sh
+  - touch /tmp/celery_setup_completed
   - /bin/bash /tmp/setup_server_service.sh
+  - touch /tmp/server_setup_completed
   - base64 -d /etc/ssl/conp.cloud.pem > /etc/ssl/conp.cloud_decoded.pem && mv /etc/ssl/conp.cloud_decoded.pem /etc/ssl/conp.cloud.pem
   - base64 -d /etc/ssl/conp.cloud.key > /etc/ssl/conp.cloud_decoded.key && mv /etc/ssl/conp.cloud_decoded.key /etc/ssl/conp.cloud.key
   - chmod 644 /etc/ssl/conp.cloud.pem
   - chmod 600 /etc/ssl/cloudflare.key
   - systemctl restart nginx
+  - touch /tmp/cloud_init_completed
 
 ssh_authorized_keys:
   ${ssh_authorized_keys}
