--- a/cloud-init/kubeadm/server-common.yaml
+++ b/cloud-init/kubeadm/server-common.yaml
@@ -103,8 +103,6 @@ write_files:
       echo "NGINX $SERVER_TYPE"
       cp /home/ubuntu/full-stack-server/nginx/neurolibre-$SERVER_TYPE.conf /etc/nginx/sites-available/
       cp /home/ubuntu/full-stack-server/nginx/neurolibre_params /etc/nginx/
-      echo "${api_password}" | sudo htpasswd -i -c /etc/nginx/.htpasswd "${api_username}"
-      chmod 600 /etc/nginx/.htpasswd
       rm -f /etc/nginx/sites-enabled/default
       mkdir -p /var/run/neurolibre
       chmod 770 /var/run/neurolibre
@@ -158,6 +156,8 @@ runcmd:
   - while [ ! -f /tmp/celery_setup_completed ]; do sleep 1; done;
   - /bin/bash /tmp/setup_server_service.sh
   - while [ ! -f /tmp/server_setup_completed ]; do sleep 1; done;
+  - echo "${api_password}" | sudo htpasswd -i -c /etc/nginx/.htpasswd "${api_username}"
+  - chmod 600 /etc/nginx/.htpasswd
   - systemctl restart nginx
   - touch /tmp/cloud_init_completed
 
