--- a/cloud-init/kubeadm/server-common.yaml
+++ b/cloud-init/kubeadm/server-common.yaml
@@ -104,8 +104,9 @@ write_files:
       export SERVER_TYPE="${server_flavor}"
       export SERVER_DOMAIN="${server_domain}"
       export SERVER_SUBDOMAIN="${server_subdomain}"
-      echo "NGINX $SERVER_TYPE"
-      envsubst '${SERVER_DOMAIN} ${SERVER_SUBDOMAIN}' < /home/ubuntu/full-stack-server/nginx/neurolibre-$SERVER_TYPE.template > /etc/nginx/sites-available/neurolibre-$SERVER_TYPE.conf
+      echo "NGINX $SERVER_TYPE $SERVER_DOMAIN $SERVER_SUBDOMAIN"
+      envsubst '${SERVER_DOMAIN} ${SERVER_SUBDOMAIN}' < /home/ubuntu/full-stack-server/nginx/neurolibre-$SERVER_TYPE.template > /home/ubuntu/neurolibre-$SERVER_TYPE.conf
+      cp /home/ubuntu/neurolibre-$SERVER_TYPE.conf /etc/nginx/sites-available/neurolibre-$SERVER_TYPE.conf
       cp /home/ubuntu/full-stack-server/nginx/neurolibre_params /etc/nginx/
       rm -f /etc/nginx/sites-enabled/default
       mkdir -p /var/run/neurolibre
