--- a/terraform-modules/registry/templates/registry_vars.env
+++ b/terraform-modules/registry/templates/registry_vars.env
@@ -1,4 +1,6 @@
 REGISTRY_HTTP_TLS_KEY=/opt/docker-registry/ssl/key.pem
 REGISTRY_HTTP_TLS_CERTIFICATE=/opt/docker-registry/ssl/cert.pem
 REGISTRY_HTTP_SECRET=${secret}
-${extra_vars}
+REGISTRY_AUTH=htpasswd
+REGISTRY_AUTH_HTPASSWD_REALM="Registry Realm"
+REGISTRY_AUTH_HTPASSWD_PATH=${docker_registry_path}
