--- a/terraform-modules/registry/terraform.tfvars.template
+++ b/terraform-modules/registry/terraform.tfvars.template
@@ -15,3 +15,9 @@ registry_local_volume = ""
 host_src_path = ""
 docker_registry_user = ""
 docker_registry_password = ""
+new_relic_api = ""
+new_relic_account = ""
+new_relic_license = ""
+instance_volume_size = "2000"
+existing_volume_uuid = ""
+admin_email = "...@....com"
