For the life of mine, wtf

--- a/cloud-init/kubeadm/node.yaml
+++ b/cloud-init/kubeadm/node.yaml
@@ -4,7 +4,7 @@ packages:
 runcmd:
   # NFS
   - mkdir -p /shared
-  - echo "${master_ip}:/shared      /shared      nfs rw,noatime,nolock,hard,tcp 0 0" >> /etc/fstab
+  - echo "${master_ip}:/shared      /shared      nfs rw,noatime,nolock,hard,tcp,vers=4 0 0" >> /etc/fstab
   - mkdir -p ${sftp_dir}
   - echo "${sftp_ip}:${sftp_dir}      ${sftp_dir}      nfs rw,noatime,nolock,hard,tcp 0 0" >> /etc/fstab
   - mount -a
