--- a/terraform-modules/binderhub/grafana/grafana-deploy.yaml
+++ b/terraform-modules/binderhub/grafana/grafana-deploy.yaml
@@ -10,7 +10,21 @@ spec:
     requests:
       storage: 10Gi
 ---
-
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: grafana-datasources
+  namespace: grafana
+data:
+  prometheus.yaml: |-
+    apiVersion: 1
+    datasources:
+    - name: Prometheus
+      type: prometheus
+      url: http://prometheus-server.monitoring.svc.cluster.local:9090
+      access: proxy
+      isDefault: true
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
